--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
+certifi==2018.10.15
 Click==7.0
+docraptor==1.2.0
 Flask==1.0.2
 ItsDangerous==1.0.0
 Jinja2==2.10
 MarkupSafe==1.0
+python-dateutil==2.7.3
+six==1.11.0
+urllib3==1.24
 Werkzeug==0.14.1
